feat: 新增状态存储功能，使用统一的定时任务模块
使用 Redis 存储模式开关，加入静音、彩虹屁、拼音开关

--- a/templates/room_info.tmpl
+++ b/templates/room_info.tmpl
@@ -4,6 +4,7 @@
 📣 直播平台：{{.Platform}}
 🙌 当前在线：{{.Online}}
 ✨ 累计人数：{{.Accumulation}}
+🏃‍️人流量：{{.Count}}
 🚩 管理员：
 {{- range $value := .Admins}}
 💫 - {{$value -}}
